@@ -32,7 +32,7 @@ from redvypr.config import configuration
 import redvypr.config as redvyprconfig
 from redvypr.version import version
 import redvypr.files as files
-from redvypr.device import redvypr_device
+from redvypr.device import redvypr_device, redvypr_device_scan
 import faulthandler
 faulthandler.enable()
 
@@ -283,7 +283,6 @@ class redvypr(QtCore.QObject):
         self.numdevice = 0
         self.devices = []  # List containing dictionaries with information about all attached devices
         self.device_paths = []  # A list of pathes to be searched for devices
-        self.device_modules = []
         self.datastreams_dict = {} # Information about all datastreams, this is updated by distribute data
         self.deviceinfo_all   = {} # Information about all devices, this is updated by distribute data
 
@@ -298,7 +297,8 @@ class redvypr(QtCore.QObject):
         self.devices, self.hostinfo, self.deviceinfo_all, self.datadistinfoqueue, self.redvyprqueue, self.dt_datadist), daemon=True)
         self.datadistthread.start()
         logger.info(funcname + ':Searching for devices')
-        self.populate_device_path()
+        self.redvypr_device_scan = redvypr_device_scan()
+        #self.populate_device_path() # LEGACY
         logger.info(funcname + ':Done searching for devices')
 
         # Parsing configuration
@@ -535,183 +535,6 @@ class redvypr(QtCore.QObject):
         self.hostconfig_changed_signal.emit()
         return True
 
-    def __populate_device_path_packages(self,package_names = ['vypr','vyper']):
-        """
-        Searches for installed packages containing redvypr devices. Packages do typically start with redvypr_package_name
-        and add them to the device path
-        Updates self.device_modules with dictionaries of type
-        devdict = {'module': module, 'name': module_name, 'source': module.__file__}
-        with module the imported module with module_name at the location __file__.
-
-        Args:
-            package_names: a list of package names that will be inspected
-        Returns:
-
-        """
-
-        funcname = '__populate_device_path_packages()'
-        logger.debug(funcname)
-        for d in pkg_resources.working_set:
-            FLAG_POTENTIAL_MODULE = False
-            #print(d.key)
-            for name in package_names:
-                if name in d.key:
-                    FLAG_POTENTIAL_MODULE = True
-                    #print('maybe',d.key)
-            if d.key == 'redvypr':
-                #print('its me')
-                FLAG_POTENTIAL_MODULE = False
-
-            if(FLAG_POTENTIAL_MODULE):
-                print('Found package',d.location, d.project_name, d.version, d.key)
-                libstr2 = d.key.replace('-','_')
-
-                try:
-                    testmodule = importlib.import_module(libstr2)
-                    device_module_tmp = inspect.getmembers(testmodule, inspect.ismodule)
-                    for smod in device_module_tmp:
-                        devicemodule = getattr(testmodule, smod[0])
-                        # Check if the device is valid
-                        valid_module = self.valid_device(devicemodule)
-                        if (valid_module['valid']):  # If the module is valid add it to devices
-                            devdict = {'module': devicemodule, 'name': smod[0], 'source': smod[1].__file__}
-                            # Test if the module is already there, otherwise append
-                            FLAG_MOD_APPEND = True
-                            for m in self.device_modules:
-                                if m['module'] == devicemodule:
-                                    FLAG_MOD_APPEND = False
-                                    break
-                            if (FLAG_MOD_APPEND):
-                                logger.debug(funcname + ' Found device package {:s}'.format(libstr2))
-                                self.device_modules.append(devdict)
-                except Exception as e:
-                    logger.info(funcname + ' Could not import module: ' + str(e))
-
-    def populate_device_path(self):
-        """
-        Updates self.device_modules with dictionaries of type
-        devdict = {'module': module, 'name': module_name, 'source': module.__file__}
-        with module the imported module with module_name at the location __file__.
-        Returns:
-            None
-
-        """
-        funcname = 'populate_device_path()'
-        logger.debug(funcname)
-        self.device_modules = []  # Clear the list
-        #
-        # Add all devices from additionally folders
-        #
-        # https://docs.python.org/3/library/importlib.html#checking-if-a-module-can-be-imported
-        for dpath in self.device_paths:
-            python_files = glob.glob(dpath + "/*.py")
-            logger.debug(funcname + ' will search in path for files: {:s}'.format(dpath))
-            for pfile in python_files:
-                logger.debug(funcname + ' opening {:s}'.format(pfile))
-                module_name = pathlib.Path(pfile).stem
-                spec = importlib.util.spec_from_file_location(module_name, pfile)
-                module = importlib.util.module_from_spec(spec)
-                try:
-                    spec.loader.exec_module(module)
-                except Exception as e:
-                    logger.warning(funcname + ' could not import module: {:s} \nError: {:s}'.format(pfile, str(e)))
-
-                module_members = inspect.getmembers(module, inspect.isclass)
-                valid_module = self.valid_device(module)
-                if (valid_module['valid']):  # If the module is valid add it to devices
-                    devdict = {'module': module, 'name': module_name, 'source': module.__file__}
-                    # Test if the module is already there, otherwise append
-                    FLAG_MOD_APPEND = True
-                    for m in self.device_modules:
-                        if(m['module'] == module):
-                            FLAG_MOD_APPEND = False
-                            break
-                    if (FLAG_MOD_APPEND):
-                        self.device_modules.append(devdict)
-
-        #
-        # Add all devices from the redvypr internal device module
-        #
-        max_tries = 5000  # The maximum recursion of modules
-        n_tries = 0
-        testmodules = [redvyprdevices]
-        valid_device_modules = [] #
-        other_modules = [] # The rest
-        while (len(testmodules) > 0) and (n_tries < max_tries):
-            testmodule = testmodules[0]
-            device_module_tmp = inspect.getmembers(testmodule, inspect.ismodule)
-            for smod in device_module_tmp:
-                devicemodule = getattr(testmodule, smod[0])
-                if(devicemodule in other_modules):
-                    #logger.debug(funcname + ': Module has been tested already ...')
-                    continue
-                # Check if the device is valid
-                valid_module = self.valid_device(devicemodule)
-                if (valid_module['valid']):  # If the module is valid add it to devices
-                    devdict = {'module': devicemodule, 'name': smod[0], 'source': smod[1].__file__}
-                    # Test if the module is already there, otherwise append
-                    FLAG_MOD_APPEND = True
-                    for m in self.device_modules:
-                        if(m['module'] == devicemodule):
-                            FLAG_MOD_APPEND=False
-                            break
-                    if(FLAG_MOD_APPEND):
-                        self.device_modules.append(devdict)
-
-                    valid_device_modules.append(devicemodule)
-                else:  # Check recursive if devices are found
-                    n_tries += 1
-                    testmodules.append(devicemodule)
-                    other_modules.append(devicemodule)
-
-            testmodules.pop(0)
-
-        self.__populate_device_path_packages()
-
-    def valid_device(self, devicemodule):
-        """ Checks if the module is a valid redvypr module
-        """
-        funcname = 'valid_device(): '
-        logger.debug(funcname + 'Checking device {:s}'.format(str(devicemodule)))
-        try:
-            devicemodule.Device
-            hasdevice = True
-        except:
-            hasdevice = False
-
-        try:
-            devicemodule.start
-            hasstart = True
-        except:
-            hasstart = False
-
-        if (hasstart == False):
-            try:
-                devicemodule.Device.start
-                hasstart = True
-            except:
-                hasstart = False
-
-        try:
-            devicemodule.displayDeviceWidget
-            hasdisplaywidget = True
-        except:
-            hasdisplaywidget = False
-
-        try:
-            devicemodule.initDeviceWidget
-            hasinitwidget = True
-        except:
-            hasinitwidget = False
-
-        devicecheck = {}
-        devicecheck['valid'] = hasstart
-        devicecheck['Device'] = hasdevice
-        devicecheck['start'] = hasstart
-        devicecheck['initgui'] = hasinitwidget
-        devicecheck['displaygui'] = hasdisplaywidget
-
-        return devicecheck
 
     def device_loglevel(self, device, loglevel=None):
         """ Returns the loglevel of the device
@@ -749,7 +572,7 @@ class redvypr(QtCore.QObject):
         devicelist = []
         device_found = False
         # Loop over all modules and check of we find the name
-        for smod in self.device_modules:
+        for smod in self.redvypr_device_scan.redvypr_devices_flat:
             if (devicemodulename == smod['name']):
                 logger.debug('Trying to import device {:s}'.format(smod['name']))
                 devicemodule = smod['module']
@@ -1150,7 +973,7 @@ class redvypr(QtCore.QObject):
         funcname = self.__class__.__name__ + '.get_known_devices():'
         logger.debug(funcname)
         devices = []
-        for d in self.device_modules:
+        for d in self.redvypr_device_scan.redvypr_devices_flat:
             devices.append(d['name'])
 
         return devices
@@ -1399,6 +1222,10 @@ class redvyprWidget(QtWidgets.QWidget):
                     yaml.dump(data_save, fyaml)
 
     def open_add_device_widget(self):
+        self.add_device_widget = gui.redvyprDeviceWidget(redvypr=self.redvypr)
+        self.add_device_widget.show()
+
+    def open_add_device_widget_old(self):
         """Opens a widget for the user to choose to add a device
         TODO: make an own widget out of this
 
@@ -1459,7 +1286,7 @@ class redvyprWidget(QtWidgets.QWidget):
         self.__device_name()
         self.add_device_widget.show()
 
-    def __device_info(self):
+    def __device_info_old(self):
         """ Populates the self.__devices_info widget with the info of the module
         """
         ind = int(self.__devices_list.currentRow())
@@ -1474,13 +1301,13 @@ class redvyprWidget(QtWidgets.QWidget):
 
         self.__devices_info_sourcelabel6.setText(desctxt)
 
-    def __device_name(self):
+    def __device_name_old(self):
         devicemodulename = self.__devices_list.currentItem().text()
         devicename = devicemodulename + '_{:d}'.format(self.redvypr.numdevice + 1)
         self.__devices_devname.setText(devicename)
         self.__device_info()
 
-    def add_device_click(self):
+    def add_device_click_old(self):
         """
         """
         devicemodulename = self.__devices_list.currentItem().text()
