@@ -4,6 +4,7 @@
             - Added regular check if the distribute_data thread is still running, if not print a warning.
             - changed device.publish/subscribe flags to devices.publishes/subscribes
             - cleanup of api
+            - complete rewrite of device scan with a device scan object ( redvypr_device_scan) instead of redvypr functions.
     -0.5.2  - subscriptions as a config key for devices added
             - improved configuration parsing
             - iored with a rep/req information exchange instead of multicast. Multicast optional for broadcasting presence.
